Исправление 8 фз